--- a/02/index02.html
+++ b/02/index02.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Второй урок</h1>
+<h1>Третий урок</h1>
 
 <script src="main02.jsx"></script>
 </body>
