--- a/05/index05.html
+++ b/05/index05.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Пятый урок</h1>
+<h1>Шестой урок,Сартировка Массивов</h1>
 
 <script src="main05.js"></script>
 </body>
