--- a/06/index06.html
+++ b/06/index06.html
@@ -8,8 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Шестой урок,Сартировка Массивов</h1>
+<h1>7</h1>
 
-<script src="main06.js"></script>
+
+
+
+<script src="mainForStudents.js"></script>
 </body>
 </html>
