--- a/07/index07.html
+++ b/07/index07.html
@@ -8,11 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-<h1>7</h1>
+<h1>8</h1>
 
 
 
 
-<script src="mainForStudents.js"></script>
+<script src="main07.js"></script>
 </body>
 </html>
